--- a/index.html
+++ b/index.html
@@ -8,17 +8,34 @@
     <div class="main_txt">
       <h1>OldSeargent charity</h1>
       <p>
-        At OldSeargent charity, our mission is to honor the bravery and
-        sacrifice of military veterans by providing comprehensive support to
-        enhance their quality of life. We are dedicated to addressing the unique
-        challenges faced by veterans and their families through a range of
-        essential services and community-driven initiatives.
+        At OldSeargent Charity, our mission is to honor the extraordinary
+        bravery and selfless sacrifice of military veterans by offering a broad
+        spectrum of support designed to significantly enhance their quality of
+        life. We are deeply committed to recognizing and addressing the unique
+        challenges that veterans and their families encounter, ensuring they
+        receive the comprehensive care and assistance they deserve. Our
+        organization is dedicated to providing a range of essential services
+        tailored to meet the diverse needs of our veterans. This includes but is
+        not limited to, financial assistance, healthcare support, mental health
+        resources, and educational and vocational training. We understand that
+        transitioning from military to civilian life can be fraught with
+        difficulties, and we strive to ease this transition by offering targeted
+        support that empowers veterans to thrive. In addition to our direct
+        support services, we are actively involved in community-driven
+        initiatives aimed at fostering a supportive and inclusive environment
+        for veterans. This includes organizing outreach programs, community
+        events, and networking opportunities that help veterans connect with one
+        another and build strong, supportive relationships. Our goal is to
+        create a vibrant community where veterans feel valued and understood,
+        and where they can access the resources they need to overcome obstacles
+        and achieve their personal and professional goals.
       </p>
     </div>
     <div class="pic-cont">
       <img class="pic1" src="logo.jpeg" />
-      <img class="pic2" src="logo2.png" />
-      <iframe class="video"
+      
+      <iframe
+        class="video"
         width="560"
         height="315"
         src="https://www.youtube.com/embed/DRAsfvoZo24?si=mEUcaVbTrHw20mde"
@@ -28,7 +45,7 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
-      
+      <img class="pic2" src="logo2.png" />
     </div>
   </body>
 </html>
