--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="site">
   <head>
     <title>Charity</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="main_txt">
-      <h1>OldSeargent charity</h1>
+      <h1 class="head_txt">OldSeargent charity</h1>
       <p>
         At OldSeargent Charity, our mission is to honor the extraordinary
         bravery and selfless sacrifice of military veterans by offering a broad
@@ -32,7 +32,7 @@
       </p>
     </div>
     <div class="pic-cont">
-      <img class="pic1" src="logo.jpeg" />
+      <img class="pic1" src="images/logo.jpeg" />
       <iframe
         class="video"
         width="560"
@@ -44,7 +44,7 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
-      <img class="pic2" src="logo2.png" />
+      <img class="pic2" src="images/logo2.png" />
     </div>
   </body>
 </html>
